--- a/src/css/global.css
+++ b/src/css/global.css
@@ -188,7 +188,7 @@
  }
 
  .black {
-  color: black
+   color: black
  }
 
  .bg-blue {
@@ -296,7 +296,7 @@
  }
 
  .nav-link-container {
-  display: none;
+   display: none;
  }
 
  .folio {
@@ -348,30 +348,30 @@
    }
 
    .full-nav {
-    display: flex;
+     display: flex;
    }
 
    .nav-title {
-    margin-left: 80px;
-    letter-spacing: 2px;
+     margin-left: 80px;
+     letter-spacing: 2px;
    }
 
    .nav-link-container {
-    display: flex;
-    justify-content: flex-end;
-    flex-grow: 1;
-  }
- 
-  .nav-link-container span {
-    cursor: pointer;
-    margin: auto 0.5em;
-    font-size: 20px;
-  }
- 
-  .nav-link-container span:active {
-    position: relative;
-    top: 1px;
-  }
+     display: flex;
+     justify-content: flex-end;
+     flex-grow: 1;
+   }
+
+   .nav-link-container span {
+     cursor: pointer;
+     margin: auto 0.5em;
+     font-size: 20px;
+   }
+
+   .nav-link-container span:active {
+     position: relative;
+     top: 1px;
+   }
  }
 
  @media (max-width: 900px) {
@@ -387,39 +387,39 @@
    }
 
    .nav-link-container span {
-    font-size: 22px;
-  }
+     font-size: 22px;
+   }
  }
 
  @media (min-width: 1200px) {
-  .nav {
-    margin-bottom: 16px;
-    padding: 0 100px;
-  }
-
-  .nav-title {
-   margin-left: 100px;
-   font-size: 40px;
-  }
-}
-
-@media (min-width: 1400px) {
-  .nav {
-    margin-bottom: 16px;
-    padding: 0 120px;
-  }
-
-  .nav-title {
-    margin-left: 120px;
+   .nav {
+     margin-bottom: 16px;
+     padding: 0 100px;
    }
-}
 
-@media (min-width: 1500px) {
-  .nav {
-    margin-bottom: 16px;
-    padding: 0 180px;
-  }
-}
+   .nav-title {
+     margin-left: 100px;
+     font-size: 40px;
+   }
+ }
+
+ @media (min-width: 1400px) {
+   .nav {
+     margin-bottom: 16px;
+     padding: 0 120px;
+   }
+
+   .nav-title {
+     margin-left: 120px;
+   }
+ }
+
+ @media (min-width: 1500px) {
+   .nav {
+     margin-bottom: 16px;
+     padding: 0 180px;
+   }
+ }
 
 
  /*******************Header********************/
@@ -827,15 +827,15 @@
  }
 
  .explanation-list {
-  width: 95%;
-  padding-inline-start: 0;
+   width: 95%;
+   padding-inline-start: 0;
    pointer-events: none;
    margin: auto;
    list-style: disc;
  }
 
  .explanation-list li {
-  margin-bottom: 8px !important;
+   margin-bottom: 8px !important;
  }
 
  .checked-variable {
@@ -883,13 +883,13 @@
    }
 
    .explanation-list {
-    width: 100%;
+     width: 100%;
    }
  }
 
  @media (min-width: 1000px) {
    .top-container {
-    font-size: 21px;
+     font-size: 21px;
      line-height: 32px;
      width: 85%;
    }
@@ -1062,10 +1062,10 @@
  }
 
  @media (min-width: 1600px) {
-  .side-display {
-    margin: auto 0 auto 10em;
-  }
-}
+   .side-display {
+     margin: auto 0 auto 10em;
+   }
+ }
 
  /*******************Button Box**********************/
 
@@ -1202,8 +1202,8 @@
  }
 
  /*********************Tubes********************/
- .row { 
-  --gap: .75em;
+ .row {
+   --gap: .75em;
    display: flex;
    flex-grow: 1;
    justify-content: center;
@@ -1394,118 +1394,77 @@
  }
 
  .next-element {
-  --fill-color: orangered;
-  animation: moveUp .5s ease-out forwards;
-}
+   --fill-color: orangered;
+   animation: moveUp .5s ease-out forwards;
+ }
 
  .swap-right {
-  animation: swapRight .5s ease-out forwards;
+   animation: swapRight .5s ease-out forwards;
  }
 
  .swap-left {
-  animation: swapLeft .5s ease-out forwards;
+   animation: swapLeft .5s ease-out forwards;
  }
 
  .thought-bubble {
    position: absolute;
-   width: max-content;
    z-index: 5;
-   background: rgb(255, 239, 224);
-   padding: 4px 22px;
-   font-size: 12px;
-   font-family: bryant-web, sans-serif;
-   font-style: normal;
+   background: #e8e8d6;
+   padding: .75em 2em 1em;
+   font-weight: 700;
    text-align: center;
-   top: 22%;
-   left: 25%;
    border: 3px solid black;
    border-radius: 20px;
+   pointer-events: none;
+   text-transform: uppercase;
+   margin-top: 2.5em;
  }
 
- .swap-bubble {
+ .bubble-bottom-left:before {
+  content: "";
   position: absolute;
-  width: max-content;
-  z-index: 5;
-  background: rgb(255, 239, 224);
-  padding: 4px 22px;
-  font-size: 12px;
-  font-family: bryant-web, sans-serif;
-  font-style: normal;
-  text-align: center;
-  top: 22%;
-  left: .75em;
-  border: 5px solid black;
-  border-radius: 20px;
+  border-left: 24px solid black;
+  border-right: 12px solid transparent;
+  border-top: 12px solid black;
+  border-bottom: 20px solid transparent;
+  left: 10px;
+  bottom: -25px;
 }
 
-.swap-bubble.right {
-  display: none;
+.bubble-bottom-left:after {
+  content: "";
+  position: absolute;
+  border-left: 24px solid #e8e8d6;
+  border-right: 12px solid transparent;
+  border-top: 12px solid #e8e8d6;
+  border-bottom: 20px solid transparent;
+  left: 13px;
+  bottom: -18px;
 }
 
- .stay-bubble {
-   top: 25% !important;
-   left: 25% !important;
-   padding: 12px !important;
+ .bubble-swap {
+  left: 1em;
  }
 
- .thought-bubble p {
-   margin: 0px 0px 3px;
-   font-weight: 600;
-   pointer-events: none;
-   text-transform: uppercase;
+ .swap-bubble.right {
+   display: none;
  }
 
- .thought-bubble div {
-   margin: 0px;
-   font-weight: 700;
-   pointer-events: none;
-   text-transform: uppercase;
- }
 
  .less {
    color: #f06c07;
    font-size: 20px;
  }
 
- .bubble-bottom-left:before {
-   content: "";
-   width: 0px;
-   height: 0px;
-   position: absolute;
-   border-left: 24px solid black;
-   border-right: 12px solid transparent;
-   border-top: 12px solid black;
-   border-bottom: 20px solid transparent;
-   left: 10px;
-   bottom: -21px;
-   z-index: -1;
- }
-
- .bubble-bottom-left:after {
-   content: "";
-   width: 0px;
-   height: 0px;
-   position: absolute;
-   border-left: 24px solid rgb(255, 239, 224);
-   border-right: 12px solid transparent;
-   border-top: 12px solid rgb(255, 239, 224);
-   border-bottom: 20px solid transparent;
-   left: 13px;
-   bottom: -14px;
-   z-index: -1;
- }
-
- .no-swap {
-   margin-bottom: 5px !important;
- }
+ 
 
  .finished-bubble {
    position: absolute;
    z-index: 5;
-   background: rgb(255, 239, 224);
+   background: #e8e8d6;
    border-radius: 30px;
    padding: 10px 30px 10px;
-   font-size: 2em;
+   font-size: 1.5em;
    font-weight: 600;
    text-align: center;
    width: auto;
@@ -1513,32 +1472,40 @@
    margin: 1.5em;
  }
 
+ .finished-bubble img {
+  width: 30px !important;
+  height: 30px !important;
+ }
+
  @keyframes moveUp {
-  from {
-    bottom: 0px;
-  }
-  to {
-    bottom: 15px;
-  }
-}
+   from {
+     bottom: 0px;
+   }
 
-@keyframes swapRight {
-  from {
-    left: 0px;
-  }
-  to {
-    left: calc(var(--width) + var(--gap));
-  }
-}
+   to {
+     bottom: 15px;
+   }
+ }
 
-@keyframes swapLeft {
-  from {
-    right: 0px;
-  }
-  to {
-    right: calc(var(--width) + var(--gap));
-  }
-}
+ @keyframes swapRight {
+   from {
+     left: 0px;
+   }
+
+   to {
+     left: calc(var(--width) + var(--gap));
+   }
+ }
+
+ @keyframes swapLeft {
+   from {
+     right: 0px;
+   }
+
+   to {
+     right: calc(var(--width) + var(--gap));
+   }
+ }
 
  @keyframes fill-before {
    to {
@@ -1556,31 +1523,12 @@
    .cap {
      font-size: 12px;
    }
-
-   .thought-bubble {
-     padding: 6px 22px;
-     font-size: 14px;
-   }
-
-   .swap-bubble {
-    padding: 6px 22px;
-    font-size: 14px;
-   }
  }
 
- @media (min-width: 500px) {
-   .thought-bubble {
-     left: 40%;
-   }
-
-   .swap-bubble {
-    left: 40%;
-  }
- }
-
+ 
  @media (min-width: 600px) {
    .row {
-    --gap: 2em;
+     --gap: 2em;
      height: 14em;
      gap: var(--gap);
    }
@@ -1589,22 +1537,20 @@
      font-size: 18px;
    }
 
-   .thought-bubble {
-     padding: 8px 26px;
-     border-radius: 24px;
-     top: 25%;
-     left: 55%;
-     font-size: 16px;
-   }
-
-   .stay-bubble {
-     top: 30% !important;
-     left: 50% !important;
-     padding: 16px !important;
+ .thought-bubble {
+    font-size: 20px;
+    margin-top: 3em;
    }
 
    .finished-bubble {
-     margin: 2em;
+    margin: 1.75em;
+    font-size: 2em;
+    padding: .5em 2em;
+   }
+
+   .finished-bubble img {
+    width: 40px !important;
+    height: 40px !important;
    }
  }
 
@@ -1618,17 +1564,11 @@
    }
 
    .thought-bubble {
-     left: calc(50% + .75em);
-     font-size: 18px;
-     top: 30%;
-
-     padding: 10px 30px;
-     border-radius: 28px;
+    font-size: 22px;
    }
 
    .finished-bubble {
-     margin: 1.5em;
-     font-size: 3em;
+    padding: .5em 2em;
    }
  }
 
@@ -1638,17 +1578,17 @@
    }
 
    .thought-bubble {
-     padding: 10px 32px;
-     border-radius: 28px;
-   }
-
-   .stay-bubble {
-     left: 60% !important;
-     padding: 18px !important;
+    font-size: 24px;
+    margin-top: 3.5em;
    }
 
    .finished-bubble {
-     margin: 2em;
+    font-size: 2.5em;
+   }
+
+   .finished-bubble img {
+    width: 50px !important;
+    height: 50px !important;
    }
  }
 
@@ -1661,10 +1601,6 @@
      font-size: 24px;
    }
 
-   .thought-bubble {
-     font-size: 20px;
-     left: calc(50% + .25em);
-   }
  }
 
  @media (min-width: 1400px) {
@@ -1673,32 +1609,23 @@
    }
 
    .tube {
-    --width: calc(7vw + 0.2rem);
-  }
+     --width: calc(7vw + 0.2rem);
+   }
 
    .cap {
      font-size: 24px;
    }
 
-   .thought-bubble {
-     padding: 12px 40px;
-     left: calc(50% + .5em);
-   }
-
-   .stay-bubble {
-     left: 65% !important;
-     padding: 20px !important;
-   }
 
    .finished-bubble {
-     margin: 1.75em;
+     padding: .25em 1.5em;
    }
  }
 
  @media (min-width: 1600px) {
-  .finished-bubble {
-    margin: 2em;
-  }
+   .finished-bubble {
+     margin: 2em;
+   }
  }
 
  /****************Insertion Tubes******************/
@@ -1731,13 +1658,14 @@
  }
 
  .compare {
-  top: 8%;
-}
+   top: 8%;
+ }
 
  /****************Selection Tubes******************/
 
  .min-tube {
    --fill-color: green;
+   top: 8%;
  }
 
  .min-tube>.cap::before {
@@ -1761,8 +1689,7 @@
    top: unset;
    left: unset;
    margin: 3em;
-   padding: 10px 22px 12px;
-   height: 5em;
+   height: calc(10vw + 0.6rem);
  }
 
  .selection-stay div {
@@ -1784,18 +1711,12 @@
    position: absolute;
    width: 100%;
    justify-content: center;
-   font-size: 20px;
-   color: blue;
-   top: -20%;
+   color: white;
+   background-color: blue;
+   border-radius: 8px;
+   top: -22%;
    z-index: 4;
- }
-
- .arri::before {
-   content: "";
-   position: absolute;
-   width: 120%;
-   height: 10em;
-   top: -10px;
+   padding-bottom: 3px;
  }
 
  .arrj {
@@ -1804,18 +1725,12 @@
    position: absolute;
    width: 100%;
    justify-content: center;
-   font-size: 20px;
-   color: blue;
-   top: -20%;
+   color: white;
+   background-color: rgb(131, 3, 151);
+   border-radius: 8px;
+   top: -22%;
    z-index: 4;
- }
-
- .arrj::before {
-   content: "";
-   position: absolute;
-   width: 120%;
-   height: 10em;
-   top: -10px;
+   padding-bottom: 3px;
  }
 
  @media (min-width: 400px) {
@@ -1846,20 +1761,6 @@
    }
  }
 
- @media (min-width: 800px) {
-   .selection-stay {
-     padding: 14px 26px;
-   }
-
-   .arri::before {
-     height: 10.5em;
-   }
-
-   .arrj::before {
-     height: 10.5em;
-   }
- }
-
  @media (min-width: 1000px) {
    .selection-stay {
      margin: 4.75em;
@@ -1869,13 +1770,6 @@
      font-size: 40px;
    }
 
-   .arri::before {
-     height: 11.75em;
-   }
-
-   .arrj::before {
-     height: 11.75em;
-   }
  }
 
  @media (min-width: 1200px) {
@@ -1888,14 +1782,6 @@
    .selection-stay {
      margin: 4.5em;
    }
-
-   .arri::before {
-     height: calc(16vw + 4.5em);
-   }
-
-   .arrj::before {
-     height: calc(16vw + 4.5em);
-   }
  }
 
  @media (min-width: 1600px) {
@@ -1907,14 +1793,6 @@
  @media (min-width: 1800px) {
    .selection-stay {
      margin: 5.5em;
-   }
-
-   .arri::before {
-     height: calc(16vw + 6em);
-   }
-
-   .arrj::before {
-     height: calc(16vw + 6em);
    }
  }
 
@@ -2131,10 +2009,7 @@
 
  }
 
- @media (min-width: 1200px) {
-
-
- }
+ @media (min-width: 1200px) {}
 
  @media (min-width: 1400px) {
    .social-image span {
