--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1275,7 +1275,7 @@
    display: grid;
    place-content: center;
    font-size: 10px;
-   font-weight: 500;
+   font-weight: 700;
    font-style: normal;
    padding-bottom: 10px;
  }
@@ -1399,12 +1399,19 @@
  }
 
  .swap-right {
-   animation: swapRight .5s ease-out forwards;
+   animation: swapRight .5s ease-out both;
  }
 
  .swap-left {
-   animation: swapLeft .5s ease-out forwards;
+   animation: swapLeft .5s ease-out both;
  }
+
+ .finished>.cap::before {
+  content: "Sorted";
+  position: relative;
+  top: 4px;
+  font-weight: 600;
+}
 
  .thought-bubble {
    position: absolute;
@@ -1534,7 +1541,7 @@
    }
 
    .cap {
-     font-size: 18px;
+     font-size: 17px;
    }
 
  .thought-bubble {
@@ -1553,6 +1560,12 @@
     height: 40px !important;
    }
  }
+
+ @media (min-width: 700px) {
+  .cap {
+    font-size: 19px;
+  }
+}
 
  @media (min-width: 800px) {
    .row {
