--- a/src/css/global.css
+++ b/src/css/global.css
@@ -80,7 +80,6 @@
 
  [data-theme="dark"] .current {
    --fill-color: green;
-   top: 8%;
  }
 
  [data-theme="dark"] .current-element {
@@ -286,6 +285,7 @@
    flex-direction: column;
    height: 20px;
    justify-content: space-around;
+   cursor: pointer;
  }
 
  .nav-patty {
@@ -1355,8 +1355,8 @@
        rgb(0 0 0 / 0.25),
        transparent 50% 70%,
        rgb(0 0 0 / 0.25));
-   /* animation: fill-before 0.66s linear forwards; */
-   height: var(--fill-end);
+   animation: fill-before 0.66s linear forwards;
+   /* height: var(--fill-end); */
  }
 
  .fill::after {
@@ -1372,8 +1372,8 @@
    bottom: var(--fill-start);
    background-image: var(--glas-gradient),
      linear-gradient(to right, rgb(69 68 68 / 25%), transparent 100%);
-   /* animation: fill-after 0.66s linear forwards; */
-   bottom: var(--fill-end);
+   animation: fill-after 0.66s linear forwards;
+   /* bottom: var(--fill-end); */
  }
 
  .current-element>.cap::before {
@@ -1399,19 +1399,30 @@
  }
 
  .swap-right {
-   animation: swapRight .5s ease-out both;
+   z-index: 99;
+   animation: swapRight .5s ease-out forwards;
+ }
+
+ .swap-right::before {
+  content: none;
  }
 
  .swap-left {
-   animation: swapLeft .5s ease-out both;
+   z-index: 9;
+   animation: swapLeft .5s ease-out forwards;
  }
 
+ .swap-left::before {
+  content: none;
+ }
+
+
  .finished>.cap::before {
-  content: "Sorted";
-  position: relative;
-  top: 4px;
-  font-weight: 600;
-}
+   content: "Sorted";
+   position: relative;
+   top: 4px;
+   font-weight: 600;
+ }
 
  .thought-bubble {
    position: absolute;
@@ -1427,30 +1438,9 @@
    margin-top: 2.5em;
  }
 
- .bubble-bottom-left:before {
-  content: "";
-  position: absolute;
-  border-left: 24px solid black;
-  border-right: 12px solid transparent;
-  border-top: 12px solid black;
-  border-bottom: 20px solid transparent;
-  left: 10px;
-  bottom: -25px;
-}
-
-.bubble-bottom-left:after {
-  content: "";
-  position: absolute;
-  border-left: 24px solid #e8e8d6;
-  border-right: 12px solid transparent;
-  border-top: 12px solid #e8e8d6;
-  border-bottom: 20px solid transparent;
-  left: 13px;
-  bottom: -18px;
-}
 
  .bubble-swap {
-  left: 1em;
+   left: 1em;
  }
 
  .swap-bubble.right {
@@ -1462,8 +1452,6 @@
    color: #f06c07;
    font-size: 20px;
  }
-
- 
 
  .finished-bubble {
    position: absolute;
@@ -1480,8 +1468,8 @@
  }
 
  .finished-bubble img {
-  width: 30px !important;
-  height: 30px !important;
+   width: 30px !important;
+   height: 30px !important;
  }
 
  @keyframes moveUp {
@@ -1532,7 +1520,7 @@
    }
  }
 
- 
+
  @media (min-width: 600px) {
    .row {
      --gap: 2em;
@@ -1544,28 +1532,28 @@
      font-size: 17px;
    }
 
- .thought-bubble {
-    font-size: 20px;
-    margin-top: 3em;
+   .thought-bubble {
+     font-size: 20px;
+     margin-top: 3em;
    }
 
    .finished-bubble {
-    margin: 1.75em;
-    font-size: 2em;
-    padding: .5em 2em;
+     margin: 1.75em;
+     font-size: 2em;
+     padding: .5em 2em;
    }
 
    .finished-bubble img {
-    width: 40px !important;
-    height: 40px !important;
+     width: 40px !important;
+     height: 40px !important;
    }
  }
 
  @media (min-width: 700px) {
-  .cap {
-    font-size: 19px;
-  }
-}
+   .cap {
+     font-size: 19px;
+   }
+ }
 
  @media (min-width: 800px) {
    .row {
@@ -1577,11 +1565,11 @@
    }
 
    .thought-bubble {
-    font-size: 22px;
+     font-size: 22px;
    }
 
    .finished-bubble {
-    padding: .5em 2em;
+     padding: .5em 2em;
    }
  }
 
@@ -1591,17 +1579,17 @@
    }
 
    .thought-bubble {
-    font-size: 24px;
-    margin-top: 3.5em;
+     font-size: 24px;
+     margin-top: 3.5em;
    }
 
    .finished-bubble {
-    font-size: 2.5em;
+     font-size: 2.5em;
    }
 
    .finished-bubble img {
-    width: 50px !important;
-    height: 50px !important;
+     width: 50px !important;
+     height: 50px !important;
    }
  }
 
@@ -1667,11 +1655,7 @@
 
  .current {
    --fill-color: blue;
-   top: 8%;
- }
-
- .compare {
-   top: 8%;
+  
  }
 
  /****************Selection Tubes******************/
