--- a/src/css/global.css
+++ b/src/css/global.css
@@ -74,6 +74,10 @@
    --fill-color: blue;
  }
 
+ [data-theme="dark"] .finished {
+   --fill-color: #f06c07;
+ }
+
  [data-theme="dark"] .sorted {
    --fill-color: #f06c07;
  }
@@ -83,12 +87,12 @@
  }
 
  [data-theme="dark"] .pivot-value {
-  --fill-color: red;
-}
+   --fill-color: red;
+ }
 
-[data-theme="dark"] .arri {
-  background-color: green;
-}
+ [data-theme="dark"] .arri {
+   background-color: green;
+ }
 
 
  [data-theme="dark"] .current-element {
@@ -117,7 +121,6 @@
    font-style: normal;
    margin: 0;
    height: 100%;
-   overflow-x: hidden;
  }
 
  h1,
@@ -242,6 +245,9 @@
    text-align: center;
    margin-bottom: 8px;
    padding: 0 20px;
+   font-family: "open-sans", sans-serif;
+   font-weight: 700;
+   font-style: normal;
  }
 
  .nav-switch {
@@ -257,6 +263,9 @@
    margin: 8px auto;
    left: 10px;
    position: relative;
+   font-family: "roboto-slab", serif;
+font-weight: 700;
+font-style: normal;
  }
 
  .nav-burger {
@@ -821,10 +830,16 @@
    pointer-events: none;
    margin: auto;
    list-style: disc;
+   margin-inline-start: 1em;
  }
 
  .explanation-list li {
    margin-bottom: 8px !important;
+ }
+
+ .explanation-list div {
+  font-weight: 600;
+  margin-bottom: 1em;
  }
 
  .checked-variable {
@@ -867,10 +882,6 @@
      width: 80%;
    }
 
-   .insertion.top-container {
-     width: 85%;
-   }
-
    .explanation-list {
      width: 100%;
    }
@@ -881,10 +892,6 @@
      font-size: 21px;
      line-height: 32px;
      width: 85%;
-   }
-
-   .insertion.top-container {
-     width: 95%;
    }
 
    .explanation-heading {
@@ -902,9 +909,6 @@
      font-size: 22px;
    }
 
-   .insertion.top-container {
-     width: 95%;
-   }
  }
 
  @media (min-width: 1400px) {
@@ -955,7 +959,7 @@
 
  @media (min-width: 700px) {
    pre {
-     font-size: 16px;
+     font-size: 17px;
      padding: 1em 3em !important;
    }
  }
@@ -984,8 +988,9 @@
    box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black !important;
    border-radius: 40px;
    padding: 8px;
-   font-weight: 500;
-   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-family: "open-sans", sans-serif;
+   font-weight: 700;
+   font-style: normal;
  }
 
  .var-container {
@@ -1003,38 +1008,39 @@
    display: flex;
    flex-direction: column;
    align-items: center;
+   font-size: 20px;
  }
 
  .array-span {
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: 0.33em;
-  letter-spacing: 0.25em;
-  color: #f06c07;
-}
+   margin-top: auto;
+   margin-bottom: auto;
+   margin-left: 0.33em;
+   letter-spacing: 0.25em;
+   color: #f06c07;
+   font-size: 20px;
+ }
 
-.checked-container {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding-top: 5px;
-}
-
+ .checked-container {
+   display: flex;
+   flex-grow: 1;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+   padding-top: 5px;
+ }
 
  .insertion.array-container {
    height: 33%;
  }
-font-family
- /* .insertion.var-container {
-   justify-content: space-evenly;
- } */
-
-
 
  .insertion.checked-container {
    flex-grow: unset;
+ }
+
+ @media (min-width: 600px) {
+   .array-span {
+     font-size: 22px;
+   }
  }
 
  @media (min-width: 1200px) {
@@ -1196,6 +1202,7 @@ font-family
    height: 10em;
    gap: var(--gap);
    margin-top: 1.5%;
+   overflow-x: clip;
  }
 
  .tube {
@@ -1218,13 +1225,14 @@ font-family
  .tube::before {
    content: "";
    position: absolute;
-   width: calc(70% + var(--width) * 1);
+   width: calc(100% + var(--width) * 1);
    z-index: -1;
-   bottom: 2px;
+   bottom: 0px;
    height: calc(var(--skew) * 8);
    background: #1b1a1a68;
    border-radius: 100% 0%;
    filter: blur(14px);
+   left: 3px;
  }
 
  .cap-text {
@@ -1709,31 +1717,31 @@ font-family
 
  /****************Quick Sort Tubes******************/
  .quick-row {
-  --gap: .5em;
-  display: flex;
-  justify-content: center;
-  height: 11em;
-  gap: var(--gap);
-  margin-top: 1.5%;
-}
+   --gap: .5em;
+   display: flex;
+   justify-content: center;
+   height: 11em;
+   gap: var(--gap);
+   margin-top: 1.5%;
+ }
 
-.quick-row>.tube {
-  --width: calc(7vw + 0.6rem);
-  width: var(--width);
-}
+ .quick-row>.tube {
+   --width: calc(7vw + 0.6rem);
+   width: var(--width);
+ }
 
-.quick-row>.tube>.cap {
-  padding-top: 3px;
-}
+ .quick-row>.tube>.cap {
+   padding-top: 3px;
+ }
 
-.quick-row>.tube>.arri {
-  font-size: 12px;
-  top: -15%;
-}
+ .quick-row>.tube>.arri {
+   font-size: 12px;
+   top: -15%;
+ }
 
-.quick-row>.tube>.index-element {
-  font-size: 10px;
-}
+ .quick-row>.tube>.index-element {
+   font-size: 10px;
+ }
 
  .pivot-value {
    --fill-color: red;
@@ -1758,7 +1766,7 @@ font-family
  }
 
  .tube>.index-element {
-  display: none;
+   display: none;
  }
 
  .tube.index>.index-element {
@@ -1775,148 +1783,149 @@ font-family
  }
 
  .quick-swap.thought-bubble {
- padding: 0.75em 1em 1em;
+   padding: 0.75em 1em 1em;
  }
 
  @media (min-width: 600px) {
-  .quick-row {
-    --gap: .5em;
-    height: 17em;
-    gap: var(--gap);
-    margin-top: 1.5%;
-  }
+   .quick-row {
+     --gap: .5em;
+     height: 17em;
+     gap: var(--gap);
+     margin-top: 1.5%;
+   }
 
-  .quick-row>.tube {
-    --width: calc(9.5vw + 0.6rem);
-    width: var(--width);
-  }
+   .quick-row>.tube {
+     --width: calc(9.5vw + 0.6rem);
+     width: var(--width);
+   }
 
-  .quick-row>.tube>.arri {
-    font-size: 18px;
-  }
+   .quick-row>.tube>.arri {
+     font-size: 18px;
+   }
 
-  .quick-row>.tube>.index-element {
-    font-size: 18px;
-  }
-  
-}
+   .quick-row>.tube>.index-element {
+     font-size: 18px;
+   }
 
-@media (min-width: 800px) {
-  .quick-row {
-    --gap: .75em;
-    height: 19em;
-    gap: var(--gap);
-    margin-top: 1.5%;
-  }
+ }
 
-  .quick-row>.tube {
-    --width: calc(8.5vw + 0.6rem);
-    width: var(--width);
-  }
+ @media (min-width: 800px) {
+   .quick-row {
+     --gap: .75em;
+     height: 19em;
+     gap: var(--gap);
+     margin-top: 1.5%;
+   }
 
-  .quick.thought-bubble {
-    margin-top: 3em;
-    }
+   .quick-row>.tube {
+     --width: calc(8.5vw + 0.6rem);
+     width: var(--width);
+   }
 
-    .quick.array-span {
-      font-size: 20px;
-    }
-}
+   .quick.thought-bubble {
+     margin-top: 3em;
+   }
+
+   .quick.array-span {
+     font-size: 20px;
+   }
+ }
 
 
-@media (min-width: 1000px) {
-  .quick-row {
-    --gap: 1.25em;
-    height: 22em;
-    gap: var(--gap);
-    margin-top: 1.5%;
-  }
+ @media (min-width: 1000px) {
+   .quick-row {
+     --gap: 1.25em;
+     height: 22em;
+     gap: var(--gap);
+     margin-top: 1.5%;
+   }
 
-  .quick-row>.tube {
-    --width: calc(9vw + 0.5rem);
-    width: var(--width);
-  }
+   .quick-row>.tube {
+     --width: calc(9vw + 0.5rem);
+     width: var(--width);
+   }
 
-  .quick-row>.tube>.index-element {
-    font-size: 22px;
-  }
+   .quick-row>.tube>.index-element {
+     font-size: 22px;
+   }
 
-  .quick-row>.tube>.arri {
-    font-size: 22px;
-  }
+   .quick-row>.tube>.arri {
+     font-size: 22px;
+   }
 
-  .quick.array-span {
-    font-size: 22px;
-  }
+   .quick.array-span {
+     font-size: 22px;
+   }
 
-  .quick-swap.thought-bubble {
-    margin-top: 3em;
-    }
-}
+   .quick-swap.thought-bubble {
+     margin-top: 3em;
+   }
+ }
 
-@media (min-width: 1200px) {
-  .quick.bottom-container {
-    flex-direction: column-reverse;
-  }
+ @media (min-width: 1200px) {
+   .quick.bottom-container {
+     flex-direction: column-reverse;
+   }
 
-  .quick.side-display {
-    margin: 4em auto;
-  }
+   .quick.side-display {
+     margin: 4em auto;
+   }
 
-  .quick-row {
-    --gap: 1.5em;
-    height: 24em;
-    gap: var(--gap);
-    margin-top: 1.5%;
-  }
+   .quick-row {
+     --gap: 1.5em;
+     height: 24em;
+     gap: var(--gap);
+     margin-top: 1.5%;
+   }
 
-  .quick-row>.tube {
-    --width: calc(8vw + 0.6rem);
-    width: var(--width);
-  }
+   .quick-row>.tube {
+     --width: calc(8vw + 0.6rem);
+     width: var(--width);
+   }
 
-  .quick.thought-bubble {
-    margin-top: 3.5em;
-    }
+   .quick.thought-bubble {
+     margin-top: 3.5em;
+   }
 
-  .quick.text {
-    font-size: calc(var(--width) * 0.35);
-  }
-}
+   .quick.text {
+     font-size: calc(var(--width) * 0.35);
+   }
+ }
 
-@media (min-width: 1400px) {
-  .quick-row {
-    --gap: 2.5em;
-    height: 22em;
-    gap: var(--gap);
-    margin-top: 1.5%;
-  }
+ @media (min-width: 1400px) {
+   .quick-row {
+     --gap: 2.5em;
+     height: 22em;
+     gap: var(--gap);
+     margin-top: 1.5%;
+   }
 
-  .quick-row>.tube>.cap {
-    font-size: 28px;
-  }
+   .quick-row>.tube>.cap {
+     font-size: 28px;
+   }
 
-  .quick.array-span {
-    font-size: 24px;
-  }
-}
+   .quick.array-span {
+     font-size: 24px;
+   }
+ }
 
-@media (min-width: 1600px) {
-  .quick-row {
-    --gap: 2.5em;
-    height: 26em;
-    gap: var(--gap);
-    margin-top: 1.5%;
-  }
+ @media (min-width: 1600px) {
+   .quick-row {
+     --gap: 2.5em;
+     height: 26em;
+     gap: var(--gap);
+     margin-top: 1.5%;
+   }
 
-  .quick-swap.thought-bubble {
-    margin-top: 4em;
-    }
+   .quick-swap.thought-bubble {
+     margin-top: 4em;
+   }
 
-    .quick.thought-bubble {
-    margin-top: 4em;
-    }
-}
+   .quick.thought-bubble {
+     margin-top: 4em;
+   }
+ }
+
  /****************************Footer****************************/
 
  .footer {
@@ -1930,6 +1939,9 @@ font-family
    z-index: 1;
    position: relative;
    margin-top: 3em;
+   font-family: "open-sans", sans-serif;
+   font-weight: 700;
+   font-style: normal;
  }
 
  .hi {
@@ -1975,6 +1987,7 @@ font-family
    display: flex;
    justify-content: space-evenly;
    width: 90%;
+   font-size: .85em;
  }
 
  .socials {
@@ -1982,7 +1995,7 @@ font-family
    justify-content: space-evenly;
  }
 
- .sitemap-link {
+ .sitemap {
    color: yellow !important;
    cursor: pointer !important;
    text-decoration: underline;
