--- a/src/css/global.css
+++ b/src/css/global.css
@@ -10,6 +10,18 @@
    background: #202124;
  }
 
+[data-theme="dark"] .footer {
+  background: #0f0f0f;
+}
+
+[data-theme="dark"] .title-container {
+  background: #0f0f0f;
+}
+
+[data-theme="dark"] .wave {
+  fill: #0f0f0f;
+}
+
  [data-theme="dark"] .about-me-div {
    background: #1f1f1f;
  }
@@ -444,9 +456,9 @@ font-style: normal;
 
  .title-container {
    display: flex;
-   background-color: #0f0f0f;
+   background-color: #1c1b1b;
    padding: 8px;
-   margin-bottom: -3px;
+   margin-bottom: -1px;
    color: white;
    justify-content: center;
  }
@@ -510,7 +522,7 @@ font-style: normal;
  }
 
  .wave {
-   fill: #0f0f0f;
+   fill: #1c1b1b;
    z-index: 9;
  }
 
@@ -696,8 +708,8 @@ font-style: normal;
    cursor: pointer;
    flex-direction: column;
    display: flex;
-   background-color: #0f0f0f;
-   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 40px 0 rgba(0, 0, 0, 0.19) !important;
+   background-color: #1c1b1b;
+   box-shadow: 0 8px 6px 0 rgba(0, 0, 0, 0.2), 0 12px 40px 0 rgba(0, 0, 0, 0.19) !important;
    border-radius: 16px;
    transition: all 0.2s ease-in-out;
    margin-bottom: 24px;
@@ -713,6 +725,7 @@ font-style: normal;
  }
 
  .content-header {
+  font-size: 20px;
    font-weight: 600;
    margin: 4px auto 8px;
  }
@@ -727,14 +740,17 @@ font-style: normal;
 
  .content-description {
    font-weight: 500;
+   margin-bottom: 16px;
+   font-size: 18px;
  }
 
  .complexity-container {
    display: flex;
    justify-content: space-evenly;
-   margin-top: 32px;
+   margin-top: auto;
    line-height: 24px;
    color: blue;
+   font-size: 1.15em;
  }
 
  .times {
@@ -742,9 +758,9 @@ font-style: normal;
  }
 
  @media (min-width: 400px) {
-   .content-header {
-     font-size: 18px;
-   }
+  .content-description {
+    font-size: 19px;
+  }
  }
 
  @media (min-width: 500px) {
@@ -759,6 +775,14 @@ font-style: normal;
      margin-bottom: 40px;
      font-size: 18px;
    }
+
+   .content-header {
+    font-size: 21px;
+   }
+
+   .content-description {
+    font-size: 20px;
+  }
  }
 
  @media (min-width: 800px) {
@@ -766,13 +790,13 @@ font-style: normal;
      width: 50%;
    }
 
-   .content-header {
-     font-size: 20px;
-   }
+   .content-description {
+    font-size: 20px;
+    margin-bottom: 22px;
+  }
 
    .card-content {
      padding: 8px 24px 24px;
-     font-size: 20px;
    }
  }
 
@@ -1540,10 +1564,15 @@ font-style: normal;
 
  @media (min-width: 400px) {
    .cap {
-     font-size: 12px;
+     font-size: 11px;
    }
  }
 
+ @media (min-width: 500px) {
+  .cap {
+    font-size: 13px;
+  }
+ }
 
  @media (min-width: 600px) {
    .row {
@@ -1553,7 +1582,7 @@ font-style: normal;
    }
 
    .cap {
-     font-size: 17px;
+     font-size: 16px;
    }
 
    .thought-bubble {
@@ -1564,7 +1593,7 @@ font-style: normal;
 
  @media (min-width: 700px) {
    .cap {
-     font-size: 19px;
+     font-size: 18px;
    }
  }
 
@@ -1574,7 +1603,7 @@ font-style: normal;
    }
 
    .cap {
-     font-size: 22px;
+     font-size: 20px;
    }
 
    .thought-bubble {
@@ -1605,6 +1634,10 @@ font-style: normal;
    .thought-bubble {
      margin-top: 2.5em;
    }
+
+   .cap {
+    font-size: 22px;
+  }
  }
 
  @media (min-width: 1400px) {
@@ -1614,10 +1647,6 @@ font-style: normal;
 
    .tube {
      --width: calc(7vw + 0.2rem);
-   }
-
-   .cap {
-     font-size: 24px;
    }
  }
 
@@ -1976,7 +2005,7 @@ font-style: normal;
    flex-direction: column;
    line-height: 30px;
    color: ghostwhite;
-   background-color: #0f0f0f;
+   background-color: #1c1b1b;
    align-items: center;
    padding: 24px 0 30px;
    z-index: 1;
