--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,4 +1,3 @@
- @import url("https://use.typekit.net/emu7cwz.css");
 
  :root {
    --background: white;
@@ -195,13 +194,15 @@
  }
 
  .bg-blue {
-   border-radius: 10px;
+   /* border-radius: 10px;
    padding: 0px 5px;
    color: white;
    background-color: blue;
    display: inline-block;
    min-width: 24px;
-   text-align: center;
+   text-align: center; */
+   color: #6b6bf8;
+   font-weight: 700;
  }
 
  .purple {
@@ -209,13 +210,8 @@
  }
 
  .bg-purple {
-   border-radius: 10px;
-   padding: 0px 5px;
-   color: white;
-   background-color: rgb(131, 3, 151);
-   display: inline-block;
-   min-width: 24px;
-   text-align: center;
+   color: rgb(131, 3, 151);
+   font-weight: 700;
  }
 
  .red {
@@ -223,13 +219,8 @@
  }
 
  .bg-red {
-   border-radius: 10px;
-   padding: 0px 5px;
-   color: white;
-   background-color: red;
-   display: inline-block;
-   min-width: 24px;
-   text-align: center;
+   color: red;
+   font-weight: 700;
  }
 
 
@@ -238,13 +229,8 @@
  }
 
  .bg-green {
-   border-radius: 10px;
-   padding: 0px 5px;
-   color: white;
-   background-color: green;
-   display: inline-block;
-   min-width: 24px;
-   text-align: center;
+   color: green;
+   font-weight: 700;
  }
 
  .orange {
@@ -252,13 +238,8 @@
  }
 
  .bg-orange {
-   border-radius: 10px;
-   padding: 0px 5px;
-   color: white;
-   background-color: orange;
-   display: inline-block;
-   min-width: 24px;
-   text-align: center;
+   color: orange;
+   font-weight: 700;
  }
 
  .yellow {
@@ -378,8 +359,6 @@
    }
  }
 
- @media (min-width: 800px) {}
-
  @media (min-width: 900px) {
    .nav-bun {
      display: none;
@@ -465,7 +444,6 @@
  .header {
    display: flex;
    flex-direction: column;
-
  }
 
  .title-container {
@@ -960,7 +938,6 @@
    .selection.top-container {
      width: 85%;
    }
-
  }
 
  @media (min-width: 1400px) {
@@ -1056,7 +1033,7 @@
  }
 
  .var-container h4 {
-  margin-bottom: 0px;
+   margin-bottom: 0px;
  }
 
  .array-container {
@@ -1149,8 +1126,8 @@
  }
 
  .mute-button {
-  margin: .5em 0;
-  border-radius: 8px;
+   margin: .5em 0;
+   border-radius: 8px;
  }
 
  .refresh-button {
@@ -1295,24 +1272,6 @@
    filter: blur(14px);
    left: 3px;
  }
-
- /* .cap-text {
-   width: 100%;
-   color: var(--fill-color);
-   background-color: rgb(0 0 0 / 0.1);
-   padding-top: calc(var(--skew) + var(--width) * 0.05);
-   padding-bottom: calc(var(--width) * 0.1);
-   display: grid;
-   place-content: center;
-   margin-top: calc(var(--skew) * -0.5);
-   border-bottom-left-radius: 50% var(--skew);
-   border-bottom-right-radius: 50% var(--skew);
-   --mask-image: radial-gradient(ellipse 100% calc(var(--skew) * 2) at center top,
-       transparent calc(50% - 1px),
-       black calc(50% + 1px));
-   -webkit-mask-image: var(--mask-image);
-   mask-image: var(--mask-image);
- } */
 
  .cap {
    --cap-height: calc(var(--width) * 0.4);
@@ -1483,7 +1442,7 @@
  }
 
  .next-element {
-  --fill-color: rgb(131, 3, 151);
+   --fill-color: rgb(131, 3, 151);
  }
 
  .swap-right {
@@ -1742,7 +1701,6 @@
 
  .current {
    --fill-color: blue;
-
  }
 
  /****************Selection Tubes******************/
@@ -1795,7 +1753,6 @@
    .arrj {
      font-size: 22px;
    }
-
  }
 
  @media (min-width: 1000px) {
@@ -1806,7 +1763,6 @@
    .arrj {
      font-size: 26px;
    }
-
  }
 
 
@@ -1870,8 +1826,6 @@
    top: 4px;
    font-size: 0.75em;
  }
-
-
 
  .pivot-index {
    --fill-color: blue;
@@ -1941,7 +1895,6 @@
      width: var(--width);
    }
 
-
    .quick.array-span {
      font-size: 20px;
    }
@@ -1989,7 +1942,6 @@
 
    .quick-row {
      --gap: 1.5em;
-
      gap: var(--gap);
      margin-top: 1.5%;
    }
@@ -2094,7 +2046,6 @@
    cursor: pointer;
    width: 90%;
    font-size: 18px;
-
  }
 
  .footer-svg-container {
@@ -2209,20 +2160,14 @@
      width: 100%;
    }
 
-
    .footer-links {
-
      width: 45%;
    }
 
    .link {
-
      text-align: center;
    }
-
  }
-
- @media (min-width: 1200px) {}
 
  @media (min-width: 1400px) {
    .social-image span {
